--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Desafio Android</string>
+    <string name="io_error">"Falha ao carregar anúncios. Verifique sua conexão de internet."</string>
+    <string name="json_parse_error">"Falha ao processar os dados dos anúncios. Tente novamente mais tarde."</string>
+    <string name="generic_error">"Ocorreu um erro desconhecido. Tente novamente mais tarde."</string>
 </resources>
